# src/categories/categories.controller.ts
@@ -1,10 +1,22 @@
-import { Body, Controller, Delete, Get, HttpCode, Param, Post, Put } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Delete,
+  Get,
+  HttpCode,
+  Param,
+  Post,
+  Put,
+  UseGuards,
+} from '@nestjs/common';
 import { CategoriesService } from './categories.service';
 import { CreateCategoryDto } from './dto/create-category.dto';
 import { UpdateCategoryDto } from './dto/update-category.dto';
 import { Category } from './category.entity';
+import { AppApiKeyGuard } from '../auth/app-api-key.guard';
 
 @Controller('categories')
+@UseGuards(AppApiKeyGuard)
 export class CategoriesController {
   constructor(private readonly categoriesService: CategoriesService) {}
 
